--- a/templates/update.html
+++ b/templates/update.html
@@ -7,6 +7,82 @@ Actualizar Cantidad
 
 {% endblock %}
 
+{% block css %}
+<style>
+    .rounded-input {
+        border: 1px solid #ccc;
+        padding: 6px;
+        border-radius: 10px;
+        width: 100px;
+    }
+    /* Estilo para el cuerpo de la página */
+    body {
+        font-family: Arial, sans-serif;
+        background: radial-gradient(circle, #10D0E7, #E010E7);
+        margin: 0;
+        padding: 0;
+        color: #fff;
+    }
+
+    /* Estilo para la navbar */
+    .navbar {
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Estilo para las tarjetas */
+    .card {
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        transition: transform 0.3s, box-shadow 0.3s;
+        background-color: #fff;
+        color: #000;
+    }
+
+    .card:hover {
+        transform: translateY(-10px);
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+    }
+
+    .btn-primary {
+        background-color: #10D0E7;
+        border-color: #10D0E7;
+        transition: background-color 0.2s, transform 0.2s;
+    }
+
+    .btn-primary:hover {
+        background-color: #0ca0b5;
+        transform: scale(1.05);
+    }
+
+    .btn-danger {
+        background-color: #E010E7;
+        border-color: #E010E7;
+        transition: background-color 0.2s, transform 0.2s;
+    }
+
+    .btn-danger:hover {
+        background-color: #b50ca0;
+        transform: scale(1.05);
+    }
+
+    /* Animaciones */
+    .fadeIn {
+        animation: fadeIn 1s;
+    }
+
+    @keyframes fadeIn {
+        from {
+            opacity: 0;
+            transform: translateY(-20px);
+        }
+
+        to {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+</style>
+{% endblock %}
 
 {% block nav %}
 
@@ -32,7 +108,7 @@ Actualizar Cantidad
     <form action="/update/{{ index }}" method="POST" class="mt-2" class="mx-2">
         <div class="form-group">
             <label for="content">Cantidad del producto</label>
-            <input type="number" id="cantidad" name="cantidad" value="{{ producto.cantidad }}" min="1" required>
+            <input type="number" class="rounded-input" id="cantidad" name="cantidad" value="{{ producto.cantidad }}" min="1" required>
             <button type="submit" class="btn btn-primary">Actualizar</button>
         </div>
     </form>
