--- a/templates/agregar_producto.html
+++ b/templates/agregar_producto.html
@@ -1,86 +1,177 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestión de Usuarios - Otzo</title>
-    <!-- Enlaces a los archivos CSS de Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gestión de Usuarios - Otzo</title>
+  <!-- Enlaces a los archivos CSS de Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    /* Estilo para el cuerpo de la página */
+    body {
+      font-family: Arial, sans-serif;
+      background: radial-gradient(circle, #10E7D0, #E710CA);
+      margin: 0;
+      padding: 0;
+    }
+
+    /* Estilo para la navbar */
+    .navbar {
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Estilo para las tarjetas */
+    .card {
+      margin: 20px;
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      transition: transform 0.2s;
+    }
+
+    .card:hover {
+      transform: scale(1.05);
+    }
+
+    .card-img-top {
+      border-top-left-radius: 10px;
+      border-top-right-radius: 10px;
+    }
+
+    .card-body {
+      padding: 20px;
+    }
+
+    .card-title {
+      font-size: 1.5rem;
+      margin-bottom: 10px;
+    }
+
+    .card-text {
+      color: #6c757d;
+      margin-bottom: 20px;
+    }
+
+    /* Botón de la tarjeta */
+    .btn-primary {
+      background-color: #007bff;
+      border-color: #007bff;
+      padding: 10px 20px;
+      border-radius: 5px;
+      transition: background-color 0.2s, transform 0.2s;
+    }
+
+    .btn-primary:hover {
+      background-color: #0056b3;
+      transform: scale(1.05);
+    }
+
+    /* Estilos para los elementos del formulario */
+    .form-label {
+      font-weight: bold;
+    }
+
+    .rounded {
+      border-radius: 10px;
+    }
+
+    .bg-light {
+      background-color: #f8f9fa !important;
+    }
+
+    .fadeIn {
+      animation: fadeIn 1s;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+      }
+
+      to {
+        opacity: 1;
+      }
+    }
+  </style>
 </head>
+
 <body>
 
-<!-- Navbar de Bootstrap -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Otzo</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto"> <!-- Alinea el contenido a la derecha -->
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/admin">Inicio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/logout">Cerrar Sesión</a>
-        </li>
-      </ul>
+  <!-- Navbar de Bootstrap -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Otzo</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto"> <!-- Alinea el contenido a la derecha -->
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/almacenista">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/logout">Cerrar Sesión</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Contenido de tu página -->
+  {% block content %}
+  <!-- Título de la página -->
+  <div class="row justify-content-center mt-5">
+    <div class="col-md-6">
+      <h2 class="text-center mb-4">Registrar un Nuevo Producto</h2>
     </div>
   </div>
-</nav>
-
-<!-- Contenido de tu página -->
-{% block content %}
-<!-- Título de la página -->
-<div class="row justify-content-center mt-5">
+  <!-- Formulario de registro de producto -->
+  <div class="row justify-content-center">
     <div class="col-md-6">
-        <h2 class="text-center mb-4">Registrar un Nuevo Producto</h2>
-    </div>
-</div>
-<!-- Formulario de registro de producto -->
-<div class="row justify-content-center">
-    <div class="col-md-6">
-        <div class="rounded p-4 bg-light">
-            <!-- Mostrar mensajes flash -->
-            {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-            <div class="alert alert-dismissible {% for category, _ in messages %}alert-{{ category }} {% endfor %}">
-                {% for category, message in messages %}
-                <button type="button" class="btn-close" data-dismiss="alert" aria-label="Close"></button>
-                <strong>{{ message }}</strong>
-                {% endfor %}
-            </div>
-            {% endif %}
-            {% endwith %}
-            <!-- Fin de mensajes flash -->
-            <form method="POST">
-                <div class="mb-3">
-                <label for="nombre" class="form-label">Nombre del Producto:</label>
-                <input type="text" id="nombre" name="nombre" class="form-control" required>
-                </div>
-                <div class="mb-3">
-                <label for="id" class="form-label">Código de Barras:</label>
-                <input type="number" id="id" name="id" class="form-control" required>
-                </div>
-                <div class="mb-3">
-                <label for="cantidad_disponible" class="form-label">Cantidad Disponible:</label>
-                <input type="number" id="cantidad_disponible" name="cantidad_disponible" class="form-control" required>
-                </div>
-                <div class="mb-3">
-                <label for="precio" class="form-label">Precio:</label>
-                <input type="number" id="precio" name="precio" class="form-control" step="0.01" required>
-                </div>
-                <button type="submit" class="btn btn-primary">Agregar producto</button>
-                <a href="{{ url_for('gestion_productos') }}" class="btn btn-primary">Regresar</a>
-            </form>
+      <div class="rounded p-4 bg-light">
+        <!-- Mostrar mensajes flash -->
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+        <div class="alert alert-dismissible {% for category, _ in messages %}alert-{{ category }} {% endfor %}">
+          {% for category, message in messages %}
+          <button type="button" class="btn-close" data-dismiss="alert" aria-label="Close"></button>
+          <strong>{{ message }}</strong>
+          {% endfor %}
         </div>
+        {% endif %}
+        {% endwith %}
+        <!-- Fin de mensajes flash -->
+        <form method="POST">
+          <div class="mb-3">
+            <label for="nombre" class="form-label">Nombre del Producto:</label>
+            <input type="text" id="nombre" name="nombre" class="form-control" required>
+          </div>
+          <div class="mb-3">
+            <label for="id" class="form-label">Código de Barras:</label>
+            <input type="number" id="id" name="id" class="form-control" required>
+          </div>
+          <div class="mb-3">
+            <label for="cantidad_disponible" class="form-label">Cantidad Disponible:</label>
+            <input type="number" id="cantidad_disponible" name="cantidad_disponible" class="form-control" required>
+          </div>
+          <div class="mb-3">
+            <label for="precio" class="form-label">Precio:</label>
+            <input type="number" id="precio" name="precio" class="form-control" step="0.01" required>
+          </div>
+          <button type="submit" class="btn btn-primary">Agregar producto</button>
+          <a href="{{ url_for('gestion_productos') }}" class="btn btn-primary">Regresar</a>
+        </form>
+      </div>
     </div>
-</div>
+  </div>
 
-{% endblock %}
+  {% endblock %}
 
 
-<!-- Enlaces a los archivos JS de Bootstrap -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Enlaces a los archivos JS de Bootstrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
