--- a/templates/agregar_usuario.html
+++ b/templates/agregar_usuario.html
@@ -2,88 +2,174 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestión de Usuarios - Otzo</title>
-    <!-- Enlaces a los archivos CSS de Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gestión de Usuarios - Otzo</title>
+  <!-- Enlaces a los archivos CSS de Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    /* Estilo para el cuerpo de la página */
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #E71013, #10C0E7);
+      margin: 0;
+      padding: 0;
+      color: #fff;
+    }
+
+    /* Estilo para la navbar */
+    .navbar {
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Estilo para los contenedores */
+    .container {
+      margin-top: 20px;
+    }
+
+    /* Estilo para las tarjetas */
+    .card,
+    .rounded {
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      transition: transform 0.3s, box-shadow 0.3s;
+      background-color: #fff;
+    }
+
+    .card:hover,
+    .rounded:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+    }
+
+    .card-title,
+    h2 {
+      color: #E71013;
+    }
+
+    .btn-primary {
+      background-color: #10C0E7;
+      border-color: #10C0E7;
+      transition: background-color 0.2s, transform 0.2s;
+    }
+
+    .btn-primary:hover {
+      background-color: #0e9ccc;
+      transform: scale(1.05);
+    }
+
+    /* Animaciones */
+    .fadeIn {
+      animation: fadeIn 1s;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(-20px);
+      }
+
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    /* Estilo para el contenido */
+    .container {
+      padding: 20px;
+    }
+
+    .card-body,
+    .rounded {
+      text-align: center;
+      color: #000;
+    }
+
+    .card-text,
+    .form-label,
+    .form-control {
+      color: #000;
+    }
+  </style>
 </head>
 
 <body>
 
-<!-- Navbar de Bootstrap -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Otzo</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto"> <!-- Alinea el contenido a la derecha -->
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/admin">Inicio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/logout">Cerrar Sesión</a>
-        </li>
-      </ul>
+  <!-- Navbar de Bootstrap -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Otzo</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto"> <!-- Alinea el contenido a la derecha -->
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/admin">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/logout">Cerrar Sesión</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Contenido de la página -->
+  {% block content %}
+  <!-- Título de la página -->
+  <div class="row justify-content-center mt-5">
+    <div class="col-md-6">
+      <h2 class="text-center mb-4">Registrar un Nuevo Usuario</h2>
     </div>
   </div>
-</nav>
-
-<!-- Contenido de la página -->
-{% block content %}
-<!-- Título de la página -->
-<div class="row justify-content-center mt-5">
+  <!-- Formulario de registro de usuario -->
+  <div class="row justify-content-center">
     <div class="col-md-6">
-        <h2 class="text-center mb-4">Registrar un Nuevo Usuario</h2>
-    </div>
-</div>
-<!-- Formulario de registro de usuario -->
-<div class="row justify-content-center">
-    <div class="col-md-6">
-        <div class="rounded p-4 bg-light">
-            <!-- Mostrar mensajes flash -->
-            {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-            <div class="alert alert-dismissible {% for category, _ in messages %}alert-{{ category }} {% endfor %}">
-                {% for category, message in messages %}
-                <!--<button type="button" class="btn-close" data-dismiss="alert" aria-label="Close"></button> -->
-                <strong>{{ message }}</strong>
-                {% endfor %}
-            </div>
-            {% endif %}
-            {% endwith %}
-            <!-- Fin de mensajes flash -->
-            <form method="POST">
-                <div class="mb-3">
-                <label for="username" class="form-label">Nombre de usuario:</label>
-                <input type="text" id="username" name="username" class="form-control" required>
-                </div>
-                <div class="mb-3">
-                <label for="password" class="form-label">Contraseña:</label>
-                <input type="password" id="password" name="password" class="form-control" required>
-                </div>
-                <div class="mb-3">
-                <label for="role" class="form-label">Rol:</label>
-                <select id="role" name="role" class="form-select" required>
-                    <option value="Administrador">Administrador</option>
-                    <option value="Almacenista">Almacenista</option>
-                    <option value="Cajero">Cajero</option>
-                    <!-- <option value="Cliente">Cliente</option> -->
-                </select>
-                </div>
-                <button type="submit" class="btn btn-primary">Registrar</button>
-                <a href="{{ url_for('gestion_usuario') }}" class="btn btn-primary">Regresar</a>
-            </form>
+      <div class="rounded p-4 bg-light">
+        <!-- Mostrar mensajes flash -->
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+        <div class="alert alert-dismissible {% for category, _ in messages %}alert-{{ category }} {% endfor %}">
+          {% for category, message in messages %}
+          <!--<button type="button" class="btn-close" data-dismiss="alert" aria-label="Close"></button> -->
+          <strong>{{ message }}</strong>
+          {% endfor %}
         </div>
+        {% endif %}
+        {% endwith %}
+        <!-- Fin de mensajes flash -->
+        <form method="POST">
+          <div class="mb-3">
+            <label for="username" class="form-label">Nombre de usuario:</label>
+            <input type="text" id="username" name="username" class="form-control" required>
+          </div>
+          <div class="mb-3">
+            <label for="password" class="form-label">Contraseña:</label>
+            <input type="password" id="password" name="password" class="form-control" required>
+          </div>
+          <div class="mb-3">
+            <label for="role" class="form-label">Rol:</label>
+            <select id="role" name="role" class="form-select" required>
+              <option value="Administrador">Administrador</option>
+              <option value="Almacenista">Almacenista</option>
+              <option value="Cajero">Cajero</option>
+              <!-- <option value="Cliente">Cliente</option> -->
+            </select>
+          </div>
+          <button type="submit" class="btn btn-primary">Registrar</button>
+          <a href="{{ url_for('gestion_usuario') }}" class="btn btn-primary">Regresar</a>
+        </form>
+      </div>
     </div>
-</div>
-{% endblock %}
+  </div>
+  {% endblock %}
 
 
-<!-- Enlaces a los archivos JS de Bootstrap -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Enlaces a los archivos JS de Bootstrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
