--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <title>{% block title %}OTZO{% endblock %}</title>
     <!-- Enlaces a los archivos CSS de Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    {% block css %}{% endblock %}
 </head>
 
 <body>
