--- a/templates/eliminar_producto.html
+++ b/templates/eliminar_producto.html
@@ -1,80 +1,175 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eliminar Usuario - Otzo</title>
-    <!-- Enlaces a los archivos CSS de Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Eliminar Usuario - Otzo</title>
+  <!-- Enlaces a los archivos CSS de Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    /* Estilo para el cuerpo de la página */
+    body {
+      font-family: Arial, sans-serif;
+      background: radial-gradient(circle, #10E7D0, #E710CA);
+      margin: 0;
+      padding: 0;
+    }
+
+    /* Estilo para la navbar */
+    .navbar {
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Estilo para los contenedores */
+    .container {
+      margin-top: 20px;
+    }
+
+    /* Estilo para los elementos del formulario */
+    .form-label {
+      font-weight: bold;
+    }
+
+    .rounded {
+      border-radius: 10px;
+    }
+
+    .bg-light {
+      background-color: #f8f9fa !important;
+    }
+
+    /* Estilo para los botones */
+    .btn-primary {
+      background-color: #007bff;
+      border-color: #007bff;
+      padding: 10px 20px;
+      border-radius: 5px;
+      transition: background-color 0.2s, transform 0.2s;
+    }
+
+    .btn-primary:hover {
+      background-color: #0056b3;
+      transform: scale(1.05);
+    }
+
+    .btn-danger {
+      background-color: #dc3545;
+      border-color: #dc3545;
+      padding: 10px 20px;
+      border-radius: 5px;
+      transition: background-color 0.2s, transform 0.2s;
+    }
+
+    .btn-danger:hover {
+      background-color: #c82333;
+      transform: scale(1.05);
+    }
+
+    /* Animaciones */
+    .fadeIn {
+      animation: fadeIn 1s;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+      }
+
+      to {
+        opacity: 1;
+      }
+    }
+
+    /* Estilo para las alertas */
+    .alert {
+      position: relative;
+      padding: 0.75rem 1.25rem;
+      margin-bottom: 1rem;
+      border: 1px solid transparent;
+      border-radius: 0.25rem;
+    }
+
+    .alert-dismissible .btn-close {
+      position: absolute;
+      top: 0;
+      right: 0;
+      z-index: 2;
+      padding: 1.25rem 1rem;
+    }
+  </style>
 </head>
+
 <body>
 
-<!-- Navbar de Bootstrap -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Otzo</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto"> <!-- Alinea el contenido a la derecha -->
-        <!-- <li class="nav-item">
+  <!-- Navbar de Bootstrap -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Otzo</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto"> <!-- Alinea el contenido a la derecha -->
+          <!-- <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/admin">Inicio</a>
         </li> -->
-        <li class="nav-item">
-          <a class="nav-link" href="/logout">Cerrar Sesión</a>
-        </li>
-      </ul>
+          <li class="nav-item">
+            <a class="nav-link" href="/logout">Cerrar Sesión</a>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
-<!-- Contenido de tu página -->
-{% block content %}
-<div class="row justify-content-center align-items-center mt-5">
-  <div class="col-md-6">
-    <div class="rounded p-4 bg-light">
-      <div class="container my-5">
-        <h2 class="mb-4 text-center">Eliminar Producto</h2>
-        <!-- Mostrar mensajes flash -->
-        {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-        <div class="alert alert-dismissible {% for category, _ in messages %}alert-{{ category }} {% endfor %}">
-          {% for category, message in messages %}
-          <!-- <button type="button" class="btn-close" data-dismiss="alert" aria-label="Close"></button> -->
-          <strong>{{ message }}</strong>
-          {% endfor %}
-        </div>
-        {% endif %}
-        {% endwith %}
-        <!-- Fin de mensajes flash -->
-        <div class="row justify-content-center">
-          <div class="col-md-6">
-            <form method="POST">
-              <div class="mb-3">
-                <label for="producto" class="form-label">Seleccionar Producto</label>
-                <select id="producto" class="form-select" name="producto_id">
-                  <!-- Aquí se insertarán las opciones para seleccionar el producto-->
-                  {% for producto in productos %}
-                  <option value="{{ producto[0] }}">{{ producto[1] }}</option>
-                  {% endfor %}
-                </select>
-              </div>
-              <button type="submit" class="btn btn-danger">Eliminar</button>
-              <a href="/gestion_productos" class="btn btn-primary">Regresar</a>
-            </form>
+  <!-- Contenido de tu página -->
+  {% block content %}
+  <div class="row justify-content-center align-items-center mt-5">
+    <div class="col-md-6">
+      <div class="rounded p-4 bg-light">
+        <div class="container my-5">
+          <h2 class="mb-4 text-center">Eliminar Producto</h2>
+          <!-- Mostrar mensajes flash -->
+          {% with messages = get_flashed_messages(with_categories=true) %}
+          {% if messages %}
+          <div class="alert alert-dismissible {% for category, _ in messages %}alert-{{ category }} {% endfor %}">
+            {% for category, message in messages %}
+            <!-- <button type="button" class="btn-close" data-dismiss="alert" aria-label="Close"></button> -->
+            <strong>{{ message }}</strong>
+            {% endfor %}
+          </div>
+          {% endif %}
+          {% endwith %}
+          <!-- Fin de mensajes flash -->
+          <div class="row justify-content-center">
+            <div class="col-md-6">
+              <form method="POST">
+                <div class="mb-3">
+                  <label for="producto" class="form-label">Seleccionar Producto</label>
+                  <select id="producto" class="form-select" name="producto_id">
+                    <!-- Aquí se insertarán las opciones para seleccionar el producto-->
+                    {% for producto in productos %}
+                    <option value="{{ producto[0] }}">{{ producto[1] }}</option>
+                    {% endfor %}
+                  </select>
+                </div>
+                <button type="submit" class="btn btn-danger">Eliminar</button>
+                <a href="/gestion_productos" class="btn btn-primary">Regresar</a>
+              </form>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 
-{% endblock %}
-
+  {% endblock %}
 
 
-<!-- Enlaces a los archivos JS de Bootstrap -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Enlaces a los archivos JS de Bootstrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
