--- a/templates/gestion_usuario.html
+++ b/templates/gestion_usuario.html
@@ -7,6 +7,85 @@
   <title>Gestión de Usuarios - Otzo</title>
   <!-- Enlaces a los archivos CSS de Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    /* Estilo para el cuerpo de la página */
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #E71013, #10C0E7);
+      margin: 0;
+      padding: 0;
+      color: #fff;
+    }
+
+    /* Estilo para la navbar */
+    .navbar {
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Estilo para los contenedores */
+    .container {
+      margin-top: 20px;
+    }
+
+    /* Estilo para las tarjetas */
+    .card {
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      transition: transform 0.3s, box-shadow 0.3s;
+      background-color: #fff;
+    }
+
+    .card:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+    }
+
+    .card-title {
+      color: #E71013;
+    }
+
+    .btn-primary {
+      background-color: #10C0E7;
+      border-color: #10C0E7;
+      transition: background-color 0.2s, transform 0.2s;
+    }
+
+    .btn-primary:hover {
+      background-color: #0e9ccc;
+      transform: scale(1.05);
+    }
+
+    /* Animaciones */
+    .fadeIn {
+      animation: fadeIn 1s;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(-20px);
+      }
+
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    /* Estilo para el contenido */
+    .container {
+      padding: 20px;
+    }
+
+    .card-body {
+      text-align: center;
+      color: #000;
+    }
+
+    .card-text {
+      color: #000;
+    }
+  </style>
 </head>
 
 <body>
