--- a/templates/modificar_producto.html
+++ b/templates/modificar_producto.html
@@ -7,6 +7,84 @@
   <title>Gestión de Usuarios - Otzo</title>
   <!-- Enlaces a los archivos CSS de Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    /* Estilo para el cuerpo de la página */
+    body {
+      font-family: Arial, sans-serif;
+      background: radial-gradient(circle, #10E7D0, #E710CA);
+      margin: 0;
+      padding: 0;
+    }
+
+    /* Estilo para la navbar */
+    .navbar {
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Estilo para los contenedores */
+    .container {
+      margin-top: 20px;
+    }
+
+    /* Estilo para los elementos del formulario */
+    .form-label {
+      font-weight: bold;
+    }
+
+    .rounded {
+      border-radius: 10px;
+    }
+
+    .bg-light {
+      background-color: #f8f9fa !important;
+    }
+
+    /* Estilo para los botones */
+    .btn-primary {
+      background-color: #007bff;
+      border-color: #007bff;
+      padding: 10px 20px;
+      border-radius: 5px;
+      transition: background-color 0.2s, transform 0.2s;
+    }
+
+    .btn-primary:hover {
+      background-color: #0056b3;
+      transform: scale(1.05);
+    }
+
+    /* Animaciones */
+    .fadeIn {
+      animation: fadeIn 1s;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+      }
+
+      to {
+        opacity: 1;
+      }
+    }
+
+    /* Estilo para las alertas */
+    .alert {
+      position: relative;
+      padding: 0.75rem 1.25rem;
+      margin-bottom: 1rem;
+      border: 1px solid transparent;
+      border-radius: 0.25rem;
+    }
+
+    .alert-dismissible .btn-close {
+      position: absolute;
+      top: 0;
+      right: 0;
+      z-index: 2;
+      padding: 1.25rem 1rem;
+    }
+  </style>
 </head>
 
 <body>
@@ -82,7 +160,8 @@
           <!-- Campo para modificar el precio -->
           <div id="precioDiv" class="mb-3">
             <label for="new_precio" class="form-label">Nuevo Precio</label>
-            <input type="number" class="form-control" id="new_precio" name="nuevo_precio" placeholder="Nuevo Precio" step="0.01">
+            <input type="number" class="form-control" id="new_precio" name="nuevo_precio" placeholder="Nuevo Precio"
+              step="0.01">
           </div>
 
           <!-- Campo para modificar la cantidad disponible -->
